--- a/index.html
+++ b/index.html
@@ -1,9 +1,58 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>이충렬</title>
+    <title>LEE CHUNG RYEOL</title>
+    <style type="text/css">
+    html,body,table {height:100%}
+    a{
+        text-decoration: none;
+        color:white;
+    }
+    </style>
 </head>
-<body>
-    안녕하세요.<br>
-    이충렬입니다.
+<body style="background-color: black; color:white; font-family:'Times New Roman', Times, serif">
+    <table width=100% border=1 cellspacing=0 cellpadding=0>
+        <tr>
+            <!-- LEFT MENU START -->            
+            <td rowspan=2 valign=top width=100px align=center>
+                <p align=center>
+                <img src="sitelogo.png" width=100 height=100></p>
+                <DIV STYLE="writing-mode: tb-rl; font-size:25pt; margin-top:40px; font-family:'Times New Roman', Times, serif">
+                    LEE&nbsp;&nbsp;CHUNG&nbsp;&nbsp;RYEOL
+                </DIV>
+            </td>
+            <!-- LEFT MENU END -->
+
+            <!-- TOP MENU START -->
+            <td style="height:80px; text-align:center; font-size:20pt">
+                <a href="/profile/">Profile</a>
+                &nbsp;|&nbsp;
+                <a href="/interests/">Interests</a>
+                &nbsp;|&nbsp;                
+                <a href="/websites/">Websites</a>
+                &nbsp;|&nbsp;                
+                <a href="/contact/">Contact</a>
+                
+            </td>
+            <!-- TOP MENU END -->
+        </tr>
+        <tr>
+            <td style="text-align:center; font-family:돋움; font-size:20pt; line-height:30pt;">
+                    죽는 날까지 하늘을 우러러<br>
+                    한 점 부끄러움이 없기를<br>
+                    잎새에 이는 바람에도<br>
+                    나는 괴로워했다<br>
+                    별을 노래하는 마음으로<br>
+                    모든 죽어 가는 것을 사랑해야지<br>
+                    그리고 나한테 주워진 길을<br>
+                    걸어가야겠다<br>
+                    <br><br>
+                    오늘밤도 별이 바람에 스치운다
+                    <br><br>
+            </td>
+        </tr>
+    </table>
+
+    
 </body>
 </html>
