--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
             <!-- TOP MENU START -->
             <td style="height:80px; text-align:center; font-size:20pt">
-                <a href="/profile/">Profile</a>
+                <a href="/profile.html/">Profile</a>
                 &nbsp;|&nbsp;
-                <a href="/interests/">Interests</a>
+                <a href="/interests.html/">Interests</a>
                 &nbsp;|&nbsp;                
-                <a href="/websites/">Websites</a>
+                <a href="/websites.html/">Websites</a>
                 &nbsp;|&nbsp;                
-                <a href="/contact/">Contact</a>
+                <a href="/contact.html/">Contact</a>
                 
             </td>
             <!-- TOP MENU END -->
