--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         text-decoration: none;
         color:white;
     }
+
     </style>
 </head>
 <body style="background-color: black; color:white; font-family:'Times New Roman', Times, serif">
-    <table width=100% border=1 cellspacing=0 cellpadding=0>
+    <table width=100% border=0 cellspacing=0 cellpadding=0>
         <tr>
             <!-- LEFT MENU START -->            
             <td rowspan=2 valign=top width=100px align=center>
@@ -24,7 +25,8 @@
             <!-- LEFT MENU END -->
 
             <!-- TOP MENU START -->
-            <td style="height:80px; text-align:center; font-size:20pt">
+            <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
+                <div style="margin-top:20px">
                 <a href="/profile.html/">Profile</a>
                 &nbsp;|&nbsp;
                 <a href="/interests.html/">Interests</a>
@@ -32,23 +34,22 @@
                 <a href="/websites.html/">Websites</a>
                 &nbsp;|&nbsp;                
                 <a href="/contact.html/">Contact</a>
-                
+                </div>
+                <hr width=500px>
             </td>
             <!-- TOP MENU END -->
         </tr>
         <tr>
-            <td style="text-align:center; font-family:돋움; font-size:20pt; line-height:30pt;">
+            <td style="text-align:center; font-size:20pt; line-height:30pt;">
                     죽는 날까지 하늘을 우러러<br>
-                    한 점 부끄러움이 없기를<br>
+                    한점 부끄럼이 없기를,<br>
                     잎새에 이는 바람에도<br>
-                    나는 괴로워했다<br>
+                    나는 괴로워했다.<br>
                     별을 노래하는 마음으로<br>
-                    모든 죽어 가는 것을 사랑해야지<br>
-                    그리고 나한테 주워진 길을<br>
-                    걸어가야겠다<br>
-                    <br><br>
-                    오늘밤도 별이 바람에 스치운다
-                    <br><br>
+                    모든 죽어가는 것을 사랑해야지<br>
+                    그리고 나한테 주어진 길을<br>
+                    걸어가야겠다.<br><br>
+                    오늘밤에도 별이 바람에 스치운다.<br>
             </td>
         </tr>
     </table>
