--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <!-- LEFT MENU START -->            
             <td rowspan=2 valign=top width=100px align=center>
                 <p align=center>
-                <img src="sitelogo.png" width=100 height=100></p>
+                <a href="https://takoyakimchi.github.io/">
+                <img src="sitelogo.png" width=100 height=100></a></p>
                 <DIV STYLE="writing-mode: tb-rl; font-size:25pt; margin-top:40px; font-family:'Times New Roman', Times, serif">
                     LEE&nbsp;&nbsp;CHUNG&nbsp;&nbsp;RYEOL
                 </DIV>
