--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <!-- TOP MENU START -->
             <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
                 <div style="margin-top:20px">
-                <a href="/profile.html/">Profile</a>
+                <a href="/profile/">Profile</a>
                 &nbsp;|&nbsp;
-                <a href="/interests.html/">Interests</a>
+                <a href="/interests/">Interests</a>
                 &nbsp;|&nbsp;                
-                <a href="/websites.html/">Websites</a>
+                <a href="/websites/">Websites</a>
                 &nbsp;|&nbsp;                
-                <a href="/contact.html/">Contact</a>
+                <a href="/contact/">Contact</a>
                 </div>
                 <hr width=500px>
             </td>
