--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <p align=center>
                 <a href="https://takoyakimchi.github.io/">
                 <img src="sitelogo.png" width=100 height=100></a></p>
-                <DIV STYLE="writing-mode: tb-rl; font-size:25pt; margin-top:40px; font-family:'Times New Roman', Times, serif">
-                    LEE&nbsp;&nbsp;CHUNG&nbsp;&nbsp;RYEOL
+                <DIV STYLE="writing-mode: tb-rl; letter-spacing:12px; font-size:20pt; margin-top:60px; margin-bottom: 60px; font-family:'Times New Roman', Times, serif">
+                    LEE&nbsp;CHUNG&nbsp;RYEOL
                 </DIV>
             </td>
             <!-- LEFT MENU END -->
@@ -29,14 +29,14 @@
             <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
                 <div style="margin-top:20px">
                 <a href="/profile/">Profile</a>
-                &nbsp;|&nbsp;
+                &nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="/interests/">Interests</a>
-                &nbsp;|&nbsp;                
+                &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/websites/">Websites</a>
-                &nbsp;|&nbsp;                
+                &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/contact/">Contact</a>
                 </div>
-                <hr width=500px>
+                <hr width=550px>
             </td>
             <!-- TOP MENU END -->
         </tr>
