--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
         text-decoration: none;
         color:white;
     }
-
+    a:hover{
+        color:firebrick;
+    }
     </style>
 </head>
 <body style="background-color: black; color:white; font-family:'Times New Roman', Times, serif">
     <table width=100% border=0 cellspacing=0 cellpadding=0>
         <tr>
             <!-- LEFT MENU START -->            
-            <td rowspan=2 valign=top width=100px align=center>
+            <td rowspan=2 valign=top width=150px align=center>
                 <p align=center>
                 <a href="https://takoyakimchi.github.io/">
                 <img src="sitelogo.png" width=100 height=100></a></p>
@@ -41,6 +43,7 @@
             <!-- TOP MENU END -->
         </tr>
         <tr>
+            <!-- 본문 START -->
             <td style="text-align:center; font-size:20pt; line-height:30pt;">
                     죽는 날까지 하늘을 우러러<br>
                     한점 부끄럼이 없기를,<br>
@@ -52,6 +55,7 @@
                     걸어가야겠다.<br><br>
                     오늘밤에도 별이 바람에 스치운다.<br>
             </td>
+            <!-- 본문 END -->
         </tr>
     </table>
 
