--- a/interests.html
+++ b/interests.html
@@ -45,7 +45,7 @@
         <tr>
             <!-- 본문 START -->
             <td style="text-align:center; font-size:20pt; line-height:30pt;">
-                    contact test.
+                    interests test.
             </td>
             <!-- 본문 END -->
         </tr>
