--- a/profile.html
+++ b/profile.html
@@ -30,13 +30,13 @@
             <!-- TOP MENU START -->
             <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
                 <div style="margin-top:20px">
-                <a href="/profile.html/">Profile</a>
+                <a href="/profile.html">Profile</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="/interests.html/">Interests</a>
+                <a href="/interests.html">Interests</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="/websites.html/">Websites</a>
+                <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="/contact.html/">Contact</a>
+                <a href="/contact.html">Contact</a>
                 </div>
                 <hr width=550px>
             </td>
@@ -44,8 +44,9 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt;">
-                    profile test.
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                    이충렬
+                    광운대학교 소프트웨어학부 응용소프트웨어전공 2학년
             </td>
             <!-- 본문 END -->
         </tr>
