what is changed

--- a/interests.html
+++ b/interests.html
@@ -44,8 +44,8 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt;">
-                    interests test.
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                    interests
             </td>
             <!-- 본문 END -->
         </tr>
