--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt;">
-                    contact test.
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                    contact
             </td>
             <!-- 본문 END -->
         </tr>
