--- a/interests.html
+++ b/interests.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
+    <meta charset="utf-8">
     <title>LEE CHUNG RYEOL</title>
     <style type="text/css">
     html,body,table {height:100%}
@@ -9,7 +10,7 @@
         color:white;
     }
     a:hover{
-        color:firebrick;
+        color:red;
     }
     </style>
 </head>
@@ -44,8 +45,11 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
-                    interests
+            <td style="font-family: '굴림'; text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                <br>
+                기타<br>
+                일본어<br>
+                프로그래밍
             </td>
             <!-- 본문 END -->
         </tr>
