--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
+    <meta charset="utf-8">
     <title>LEE CHUNG RYEOL</title>
     <style type="text/css">
     html,body,table {height:100%}
@@ -9,7 +10,7 @@
         color:white;
     }
     a:hover{
-        color:firebrick;
+        color:red;
     }
     </style>
 </head>
@@ -44,9 +45,10 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
-                    이충렬
-                    광운대학교 소프트웨어학부 응용소프트웨어전공 2학년
+            <td style="font-family: '굴림'; text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                <br>
+                이충렬<br>
+                광운대학교 소프트웨어학부 재학중
             </td>
             <!-- 본문 END -->
         </tr>
