--- a/websites.html
+++ b/websites.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
+    <meta charset="utf-8">
     <title>LEE CHUNG RYEOL</title>
     <style type="text/css">
     html,body,table {height:100%}
@@ -9,7 +10,7 @@
         color:white;
     }
     a:hover{
-        color:firebrick;
+        color:red;
     }
     </style>
 </head>
@@ -44,8 +45,11 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
-                    websites
+            <td style="font-family: '굴림'; text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                <br>
+                <a href="https://www.facebook.com/" target="_blank">페이스북</a><br>
+                <a href="https://www.instagram.com/" target="_blank">인스타그램</a><br>
+                <a href="https://twitter.com/" target="_blank">트위터</a><br>
             </td>
             <!-- 본문 END -->
         </tr>
