--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
+    <meta charset="utf-8">
     <title>LEE CHUNG RYEOL</title>
     <style type="text/css">
     html,body,table {height:100%}
@@ -9,7 +10,7 @@
         color:white;
     }
     a:hover{
-        color:firebrick;
+        color:red;
     }
     </style>
 </head>
