--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,8 @@
         <tr>
             <!-- 본문 START -->
             <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
-                    contact
+                <br>
+                <a href="mailto:c4nyou@gmail.com">c4nyou@gmail.com</a>
             </td>
             <!-- 본문 END -->
         </tr>
