--- a/interests.html
+++ b/interests.html
@@ -45,7 +45,7 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="font-family: '굴림'; text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
                 <br>
                 기타<br>
                 일본어<br>
