--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="font-family: '굴림'; text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
                 <br>
                 이충렬<br>
                 광운대학교 소프트웨어학부 재학중
