--- a/websites.html
+++ b/websites.html
@@ -45,7 +45,7 @@
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="font-family: '굴림'; text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
                 <br>
                 <a href="https://www.facebook.com/" target="_blank">페이스북</a><br>
                 <a href="https://www.instagram.com/" target="_blank">인스타그램</a><br>
