--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="/contact.html">Contact</a>
+                <font color=red><a href="/contact.html">Contact</a></font>
                 </div>
                 <hr width=550px>
             </td>
