--- a/interests.html
+++ b/interests.html
@@ -33,7 +33,7 @@
                 <div style="margin-top:20px">
                 <a href="/profile.html">Profile</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="/interests.html">Interests</a>
+                <font color=red><a href="/interests.html">Interests</a></font>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
