--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
             <!-- TOP MENU START -->
             <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
                 <div style="margin-top:20px">
-                <a href="/profile.html">Profile</a>
+                <font color=red><a href="/profile.html">Profile</a></font>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="/interests.html">Interests</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
