--- a/websites.html
+++ b/websites.html
@@ -35,7 +35,7 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="/interests.html">Interests</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <font color=red><a href="/websites.html">Websites</a></font>
+                <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/contact.html">Contact</a>
                 </div>
