added new menu "study" and pop-up gugudan
dfsfdsfdsf

--- a/interests.html
+++ b/interests.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>LEE CHUNG RYEOL</title>
+    <link href="https://fonts.googleapis.com/css?family=Song+Myung" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
     <style type="text/css">
     html,body,table {height:100%}
     a{
@@ -11,6 +13,25 @@
     }
     a:hover{
         color:red;
+    }
+    </style>
+
+    <!-- Main Article Style -->
+    <style>
+    article{
+        margin-bottom: 10px;
+        padding: 20px;
+        border: 1px solid white;
+        margin: 20px;
+        text-align: left;
+        font-family: 'Gothic A1', sans-serif;
+        font-size:15pt;
+    }
+    article > h1{
+        font-size:30pt;
+        color: #aaaaaa;
+        font-family: 'Song Myung', serif;   
+        text-decoration: underline;    
     }
     </style>
 </head>
@@ -37,19 +58,61 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
+                <a href="./study.html">Study</a>
+                &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/contact.html">Contact</a>
                 </div>
-                <hr width=550px>
+                <hr width=650px>
             </td>
             <!-- TOP MENU END -->
         </tr>
         <tr>
             <!-- 본문 START -->
             <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
-                <br>
-                기타<br>
-                일본어<br>
-                프로그래밍
+                <article>
+                    <h1>기타</h1>
+                    <p>
+                        기타를 처음 접한 것은 초등학교 6학년 때였다.
+                        사실 그 전에도 기타를 한 번 쯤은 쳐 보고 싶었으나,
+                        그렇게까지 흥미가 있지도 않고 해서
+                        배우려고 마음먹은 적은 없었다. 하지만, 초등학교
+                        6학년 때 조용한 편이었던 나에게 친구가 기타를
+                        배워 보지 않겠냐며 권유를 해 왔다.
+                        한 번 쯤은 배워 봐도 나쁘지 않겠다고 생각했고,
+                        친구를 따라 기타 학원에 등록했다. 아버지는 내가
+                        악기를 배우는 것에 크게 기뻐하셨고, 기타를 사 주시는 등
+                        적극적으로 지원해 주셨다. 중학생이 되고 나서는 본격적으로
+                        기타를 치기 시작했고, 교내 축제에서 친구와 듀엣
+                        연주를 하기도 했다. 고등학교에 들어 가고 나서는
+                        흥미가 떨어지기도 했고
+                        학업 때문에 바쁘기도 해서 좀처럼 기타를 칠 수 없었으나,
+                        여유가 되면 다시 제대로 연습하여 가족과 친구들에게
+                        좋은 연주를 들려 주고 싶다.
+                    </p>
+                </article>
+                <article>
+                    <h1>일본</h1>
+                    <p>
+                        일본이라는 나라에 처음으로 관심을 갖게 된 것은
+                        고등학교 2학년 때였다. 1학년을 마치고 이듬해 봄방학 무렵,
+                        학교에서 60명 가량의 친구들과
+                        일본 관서(関西) 지방에 자매학교 방문을 간 적이 있다.
+                        지금 생각해 보면 코스도 그닥 좋지 않았고,
+                        처음 내렸던 오사카(大阪)와 자매학교가 있는 히로시마(広島)
+                        는 꽤나 멀리 떨어져 있는 만큼, 이동 거리도 상당했다.
+                        하지만 그 당시에는 이국적인 느낌이 상당히 좋았고,
+                        여행을 하고 있다는 느낌이 가득했다.
+                        친구들과 주변 거리를 돌아다니는 자유 시간이
+                        주어졌었는데, 나는 일본 거리의 조용한 분위기가 마음에 들어
+                        친구들과 걸어다니며 사진을 많이 찍었다.
+                        그 때 이후로 아직까지 일본에 방문한 적은 없지만,
+                        그 때의 사진을 보면 또다시 일본에 가고 싶다는 마음이 든다.
+                        현재 일본어를 조금씩 공부하고 있으며, 올해 7월에는
+                        JLPT(일본어능력시험) 2급 시험을 볼 예정이다.
+                        일본 관련 직종에 갈 지는 아직 미지수지만,
+                        취미로서라도 공부를 이어나갈 것 같다.
+                    </p>
+                </article>
             </td>
             <!-- 본문 END -->
         </tr>
