--- a/study.html
+++ b/study.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="utf-8">
@@ -31,35 +31,33 @@
             <!-- TOP MENU START -->
             <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
                 <div style="margin-top:20px">
-                <a href="./profile.html">Profile</a>
+                <a href="/profile.html">Profile</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="./interests.html">Interests</a>
+                <a href="/interests.html">Interests</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./websites.html">Websites</a>
+                <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./study.html">Study</a>
-                &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./contact.html">Contact</a>
+                <a href="/contact.html">Contact</a>
                 </div>
-                <hr width=650px>
+                <hr width=550px>
             </td>
             <!-- TOP MENU END -->
         </tr>
         <tr>
             <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt;">
-                    죽는 날까지 하늘을 우러러<br>
-                    한점 부끄럼이 없기를,<br>
-                    잎새에 이는 바람에도<br>
-                    나는 괴로워했다.<br>
-                    별을 노래하는 마음으로<br>
-                    모든 죽어가는 것을 사랑해야지<br>
-                    그리고 나한테 주어진 길을<br>
-                    걸어가야겠다.<br><br>
-                    오늘밤에도 별이 바람에 스치운다.<br>
+            <td style="text-align:center; font-size:20pt; line-height:30pt; vertical-align: top;">
+                <br>
+                다양한 학습을 체험할 수 있는 공간입니다.<br>
+                <br>
+                <br>
+                <a href="/gugudan.html" onclick="window.open(this.href, '_blank', 'width=600px,height=300px,toolbars=no,scrollbars=no'); return false;">
+                    <u>구구단</u>
+                </a>
             </td>
             <!-- 본문 END -->
         </tr>
     </table>
+
+    
 </body>
 </html>
