--- a/study.html
+++ b/study.html
@@ -37,9 +37,11 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
+                <a href="./study.html">Study</a>
+                &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/contact.html">Contact</a>
                 </div>
-                <hr width=550px>
+                <hr width=650px>
             </td>
             <!-- TOP MENU END -->
         </tr>
