--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/websites.html">Websites</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./study.html">Study</a>
+                <a href="/study.html">Study</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;                
                 <a href="/contact.html">Contact</a>
                 </div>
