--- a/index.html
+++ b/index.html
@@ -1,65 +1,41 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="utf-8">
-    <title>LEE CHUNG RYEOL</title>
-    <style type="text/css">
-    html,body,table {height:100%}
-    a{
-        text-decoration: none;
-        color:white;
-    }
-    a:hover{
-        color:red;
-    }
-    </style>
-</head>
-<body style="background-color: black; color:white; font-family:'Times New Roman', Times, serif">
-    <table width=100% border=0 cellspacing=0 cellpadding=0>
-        <tr>
-            <!-- LEFT MENU START -->            
-            <td rowspan=2 valign=top width=150px align=center>
-                <p align=center>
-                <a href="https://takoyakimchi.github.io/">
-                <img src="sitelogo.png" width=100 height=100></a></p>
-                <DIV STYLE="writing-mode: tb-rl; letter-spacing:12px; font-size:20pt; margin-top:60px; margin-bottom: 60px; font-family:'Times New Roman', Times, serif">
-                    LEE&nbsp;CHUNG&nbsp;RYEOL
-                </DIV>
-            </td>
-            <!-- LEFT MENU END -->
+<html>
+    <head>
+        <title>LEE CHUNG RYEOL</title>
+        <style>
+            * { margin: 0; padding: 0;
+                overflow: hidden;
+            }
+        </style>
+        <script language=javascript>
+            document.getElementById('firstbox').style.width = 100;
+        </script>
 
-            <!-- TOP MENU START -->
-            <td style="height:80px; text-align:center; font-size:20pt; vertical-align: top;">
-                <div style="margin-top:20px">
-                <a href="./profile.html">Profile</a>
-                &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="./interests.html">Interests</a>
-                &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./websites.html">Websites</a>
-                &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./study.html">Study</a>
-                &nbsp;&nbsp;|&nbsp;&nbsp;                
-                <a href="./contact.html">Contact</a>
-                </div>
-                <hr width=650px>
-            </td>
-            <!-- TOP MENU END -->
-        </tr>
-        <tr>
-            <!-- 본문 START -->
-            <td style="text-align:center; font-size:20pt; line-height:30pt;">
-                    죽는 날까지 하늘을 우러러<br>
-                    한점 부끄럼이 없기를,<br>
-                    잎새에 이는 바람에도<br>
-                    나는 괴로워했다.<br>
-                    별을 노래하는 마음으로<br>
-                    모든 죽어가는 것을 사랑해야지<br>
-                    그리고 나한테 주어진 길을<br>
-                    걸어가야겠다.<br><br>
-                    오늘밤에도 별이 바람에 스치운다.<br>
-            </td>
-            <!-- 본문 END -->
-        </tr>
-    </table>
-</body>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+        <script>
+            $(document).ready(function(){
+                $('#firstbox').css({
+                    height: 0,
+                    background: 'black',
+                    opacity: 0.5
+                }).animate({
+                    height: 1080,
+                    opacity: 1
+                }, 1000, function(){
+                    $('#logoanimate').css({
+                        top: '30%',
+                        left: '40%',
+                        width: '300px',
+                        height: '300px',
+                        position: 'absolute',
+                        opacity: 0
+                    }).animate({opacity: 1},1000);
+                });
+            });
+        </script>
+    </head>
+    <body>
+        <div id="firstbox"></div>
+        <a href="https://takoyakimchi.github.io/"><img id="logoanimate" src="sitelogo.png" /></a>
+    </body>
 </html>
