--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </head>
     <body>
         <div id="firstbox"></div>
-        <a href="https://takoyakimchi.github.io/"><img id="logoanimate" src="sitelogo.png" /></a>
+        <a href="https://takoyakimchi.github.io/main.html"><img id="logoanimate" src="sitelogo.png" /></a>
     </body>
 </html>
