--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
             <!-- LEFT MENU START -->            
             <td rowspan=2 valign=top width=150px align=center>
                 <p align=center>
-                <a href="https://takoyakimchi.github.io/">
+                <a href="https://takoyakimchi.github.io/main.html">
                 <img src="sitelogo.png" width=100 height=100></a></p>
                 <DIV STYLE="writing-mode: tb-rl; letter-spacing:12px; font-size:20pt; margin-top:60px; margin-bottom: 60px; font-family:'Times New Roman', Times, serif">
                     LEE&nbsp;CHUNG&nbsp;RYEOL
